# prediction-agent-benchmarker

./: .gitmodules  README.md  pyproject.toml
examples/: benchmark_olas-sme_vs_evo.py
examples/agents/: evo.py  olas_sme.py  utils.py
prediction_agent_benchmarker/: agents.py  benchmark.py
